<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9A7B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="688dp"
        android:text="@string/bienvenue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/participantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/participantJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/participantJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/participantSociety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/participantSociety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantJob"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200dp"
        android:text="@string/ajouter"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantSociety" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="320dp"
        android:text="@string/nom"
        app:layout_constraintBottom_toTopOf="@+id/job"
        app:layout_constraintEnd_toStartOf="@+id/participantName"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/job"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="86dp"
        android:text="@string/profession"
        app:layout_constraintBottom_toTopOf="@+id/society"
        app:layout_constraintEnd_toStartOf="@+id/participantJob"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/society"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="375dp"
        android:text="@string/soci_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/participantSociety"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>